crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__I090-various-default-choices.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/I090-various-default-choices
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "1\n" [Continue]
> "2\n" [Continue]
> "3\n" [Ended]
outcome: Ended
