crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__I092-should-not-gather-due-to-choice.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/I092-should-not-gather-due-to-choice
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "opt" (0) -> 0]
> "opt\n" [Continue]
> "text\n" [Done]
outcome: Error
