crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__I093-default-choices.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/I093-default-choices
oracle: 2, brink: 2, matched: 2
passing: 2/2

=== episode [0, 0] === PASS
> "" [Choices: "Choice 1" (0), "Choice 2" (1) -> 0]
> "After choice\n" [Choices: "Choice 2" (0) -> 0]
> "After choice\n" [Continue]
> "This is default.\n" [Done]
outcome: Done

=== episode [1, 0] === PASS
> "" [Choices: "Choice 1" (0), "Choice 2" (1) -> 1]
> "After choice\n" [Choices: "Choice 1" (0) -> 0]
> "After choice\n" [Continue]
> "This is default.\n" [Done]
outcome: Done
