crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__choice-content-then-divert.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/choice-content-then-divert
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "Picked." (0) -> 0]
> "Picked.\n" [Continue]
> "After divert.\n" [Ended]
outcome: Ended
