crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__choice-with-brackets-only.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/choice-with-brackets-only
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "Option" (0) -> 0]
> "Text\n" [Done]
outcome: Done
