crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__conditional-choice-in-weave2.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/conditional-choice-in-weave2
oracle: 2, brink: 2, matched: 2
passing: 2/2

=== episode [0] === PASS
> "first gather\n" [Choices: "option 1" (0), "option 2" (1) -> 0]
> "the main gather\n" [Continue]
> "bottom gather\n" [Done]
outcome: Done

=== episode [1] === PASS
> "first gather\n" [Choices: "option 1" (0), "option 2" (1) -> 1]
> "the main gather\n" [Continue]
> "bottom gather\n" [Done]
outcome: Done
